--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -8,6 +8,7 @@
   margin: 0;
   padding: 0;
   grid-column: 1 / -1;
+  max-width: 370px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
