--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,10 +5,10 @@
   font-size: 42px;
   line-height: 48px;
   color: #FFFFFF;
-  max-width: 90%;
   margin: 0;
   padding: 0;
   text-overflow: ellipsis;
+  max-width: 370px;
   white-space: nowrap;
   overflow: hidden;
 }
